# cw-ip-013_documentation_generator

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
src/: AutoDocLib.cpp  TemplateClassDoc.cpp  TemplateFuncDoc.cpp  main.cpp
src/include/: AutoDocLib.hpp  FuncInfo.hpp  StructsForDoc.hpp  TemplateClassDoc.hpp  TemplateFuncDoc.hpp
src/template/: ClassName.html  FuncName.html  index.html
test/: test_list.cpp
test/example_folder/: A.h  B.hpp  C.h  D.hpp
test/example_folder/get_class_border/: I.h
test/example_folder/get_com_border/: A.h
test/example_folder/get_description/: F.h
test/example_folder/get_name/: G.h
test/example_folder/is_documenting/: A.hpp  B.hpp
wiki/: struct of class info  struct of function info  struct of menu
